--- a/frontend-cliente/src/components/Chat/User-Chat/ConversationItem.css
+++ b/frontend-cliente/src/components/Chat/User-Chat/ConversationItem.css
@@ -91,7 +91,7 @@
   font-style: italic;
 }
 
-.unread-badge {
+.unread-badge-item {
   background-color: #FF5722;
   color: white;
   border-radius: 50%;
